<resources>
    <string name="app_name">InterviewTest</string>
    <string name="fragment_login">Login</string>
    <string name="fragment_home">Home</string>
    <string name="login">Login</string>
    <string name="label_email">Email:</string>
    <string name="helper_text_email">e.g. johndoe@example.com</string>
    <string name="invalid_email_msg">Email is invalid</string>
    <string name="label_username">Username:</string>
    <string name="helper_text_username">e.g. johndoe</string>
    <string name="label_password">Password:</string>
    <string name="helper_text_password">special characters are not allowed</string>
    <string name="greet_placeholder">Good morning, John</string>
    <string name="email_placeholder">johndoe@gmail.xom</string>
    <string name="medicine_name_placholder">Asprin</string>
    <string name="medicine_dose_placholder">2 tabs</string>
    <string name="medicine_strength_placholder">500mg</string>

    <string name="fragment_details">Details</string>
</resources>